# afop-translator-backend

./: CMakeLists.txt
include/: LocPackBinFile.h  LocPackFile.h  LocaleLine.h  Server.h
include/libraries/: rapidcsv.h
src/: CMakeLists.txt  main.cpp
src/fileutils/: LocPackBinFile.cpp  LocPackFile.cpp
src/network/: Server.cpp
src/utils/: LocaleLine.cpp
